# licorera-flow-manager

./: .env  README.md  index.html  openapi.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.cargo/: config.toml
src/: App.tsx  env.d.ts  index.css  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: backend_debug.txt  licorera.db
src-tauri/assets/www/: index-D_oXzl_S.js  index-Dr8Aj3kO.css  index.html
src-tauri/src/: main.rs  main.rs.bak
src/components/: AppHeader.tsx  AppSidebar.tsx  Dashboard.tsx  ProtectedRoute.tsx
src/contexts/: LicenseContext.tsx  SessionContext.tsx  SettingsContext.tsx
src/hooks/: api.ts  useNotifications.ts
src/pages/: Activation.tsx  Inventory.tsx  Login.tsx  POS.tsx  ReportsPage.tsx  Settings.tsx  Users.tsx
